[gd_scene load_steps=3 format=3 uid="uid://65dnn6bptiqa"]

[ext_resource type="Script" uid="uid://bdoxisbgdpl36" path="res://menus/level_selection.gd" id="1_60kdo"]
[ext_resource type="Theme" uid="uid://bdf28dglggtir" path="res://assets/HUD/theme.tres" id="1_dvbnx"]

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60kdo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -469.0
offset_top = -228.0
offset_right = -180.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Morning" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dvbnx")
theme_override_colors/font_color = Color(0.711081, 0.42688, 0.177786, 1)
theme_override_font_sizes/font_size = 70
text = "Morning"

[node name="Noon" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dvbnx")
theme_override_colors/font_color = Color(0.711081, 0.42688, 0.177786, 1)
theme_override_font_sizes/font_size = 70
text = "Noon"

[node name="Evening" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dvbnx")
theme_override_colors/font_color = Color(0.711081, 0.42688, 0.177786, 1)
theme_override_font_sizes/font_size = 70
text = "Noon"

[node name="Dawn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dvbnx")
theme_override_colors/font_color = Color(0.711081, 0.42688, 0.177786, 1)
theme_override_font_sizes/font_size = 70
text = "Dawn"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 193.0
offset_top = -228.0
offset_right = 482.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Infinite" type="Button" parent="MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dvbnx")
theme_override_colors/font_color = Color(0.711081, 0.42688, 0.177786, 1)
theme_override_font_sizes/font_size = 70
text = "Infinite Day"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Morning" to="." method="_on_morning_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Noon" to="." method="_on_noon_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Evening" to="." method="_on_evening_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Dawn" to="." method="_on_evening_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Dawn" to="." method="_on_dawn_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/VBoxContainer/Infinite" to="." method="_on_morning_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/VBoxContainer/Infinite" to="." method="_on_infinite_pressed"]
